# langchain-service

./: .dockerignore  .env  Dockerfile  README.md  README_fromLangChain.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
langchain_service/: __init__.py
tests/: test_chain_unittest.py  test_example_advance.py  test_example_simple.py
