[tool.poetry]
name = "langchain-service"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain-core = ">=0.1.5"
langchain-openai = ">=0.0.1"
pydantic = "==1.10.13"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.4"
fastapi = "^0.104.0"
sse-starlette = "^1.6.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-depends = "^1.0.1"
pytest-cov = "^4.1.0"
pytest-order = "^1.2.0"

[tool.langserve]
export_module = "langchain_service"
export_attr = "chain"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
